src/test/ui/mismatched_types/binops.stderr
error[E0369]: cannot add `Option<{integer}>` to `{integer}`
  --> $DIR/binops.rs:2:7
   |
LL |     1 + Some(1);
   |     - ^ ------- Option<{integer}>
   |     |
   |     {integer}

error[E0369]: cannot subtract `Option<{integer}>` from `usize`
  --> $DIR/binops.rs:4:16
   |
LL |     2 as usize - Some(1);
   |     ---------- ^ ------- Option<{integer}>
   |     |
   |     usize

error[E0369]: cannot multiply `{integer}` by `()`
  --> $DIR/binops.rs:6:7
   |
LL |     3 * ();
   |     - ^ -- ()
   |     |
   |     {integer}

error[E0369]: cannot divide `{integer}` by `&str`
  --> $DIR/binops.rs:8:7
   |
LL |     4 / "";
   |     - ^ -- &str
   |     |
   |     {integer}

error[E0369]: can't compare `{integer}` with `String`
  --> $DIR/binops.rs:10:7
   |
LL |     5 < String::new();
   |     - ^ ------------- String
   |     |
   |     {integer}

error[E0369]: can't compare `{integer}` with `Result<{integer}, _>`
  --> $DIR/binops.rs:12:7
   |
LL |     6 == Ok(1);
   |     - ^^ ----- Result<{integer}, _>
   |     |
   |     {integer}

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0369`.
